jellyfin/overlays/jern.me/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: jellyfin
          resources:
            requests:
              cpu: 200m
              memory: 400Mi
            limits:
              cpu: 2500m
              memory: 1Gi
