jellyfin/overlays/jern.me/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
spec:
  ingressClassName: nginx
  tls:
    - secretName: jellyfin-cert
      hosts:
        - jellyfin.jern.me
  rules:
    - host: jellyfin.jern.me
      http:
        paths:
          - backend:
              service:
                name: jellyfin
                port:
                  name: http
            path: /
            pathType: Prefix
